<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/bitmap"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/model_user_activity_register"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="128dp"
        android:layout_centerHorizontal="true"
        android:background="@mipmap/logo"
        />
    <ImageView
        android:id="@+id/model_user_activity_register_name"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@mipmap/register_icon_name"
        android:layout_below="@id/model_user_activity_register"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        />
    <com.xw.repo.XEditText
        android:id="@+id/model_user_activity_register_name_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:hint="@string/user_register_name"
        android:layout_toRightOf="@id/model_user_activity_register_name"
        android:layout_marginLeft="20dp"
        android:background="@null"
        android:maxLines="1"
        android:maxLength="15"
        android:inputType="text"
        app:x_disableEmoji="true"
        android:textColorHint="#ffffff"
        android:layout_below="@id/model_user_activity_register"
        android:layout_marginTop="37dp"
        />
    <View
        android:id="@+id/model_user_activity_register_name_line"
        style="@style/model_user_activity_login_line"
        android:layout_below="@id/model_user_activity_register_name_edittext"
        />

    <ImageView
        android:id="@+id/model_user_activity_register_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/login_icon_phone"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/model_user_activity_register_name_line"
        />

    <EditText
        android:id="@+id/model_user_activity_register_phone_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:maxLength="11"
        android:inputType="text"
        android:textSize="16sp"
        android:maxLines="1"
        android:hint="@string/user_register_phone"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:nextFocusForward="@id/model_user_activity_register_pwd_edittext"
        android:digits="0123456789"
        android:layout_toRightOf="@id/model_user_activity_register_name"
        android:layout_marginLeft="20dp"
        android:background="@null"
        android:textColorHint="#ffffff"
        android:layout_below="@+id/model_user_activity_register_name_line"
        android:layout_marginTop="30dp"
        />
    <View
        android:id="@+id/model_user_activity_register_phone_line"
        style="@style/model_user_activity_login_line"
        android:layout_below="@id/model_user_activity_register_phone"
        />
    <ImageView
        android:id="@+id/model_user_activity_register_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/login_icon_lock"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_below="@id/model_user_activity_register_phone_line"
        />
    <EditText
        android:id="@+id/model_user_activity_register_pwd_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:maxLines="1"
        android:maxLength="6"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:digits="0123456789abcdefghigklmnopqrstuvwxyz"
        android:hint="@string/user_register_pwd"
        android:layout_toRightOf="@id/model_user_activity_register_name"
        android:layout_marginLeft="20dp"
        android:background="@null"
        android:textColorHint="#ffffff"
        android:layout_marginTop="30dp"
        android:layout_below="@id/model_user_activity_register_phone_line"
        />
    <View
        android:id="@+id/model_user_activity_register_pwd_line"
        style="@style/model_user_activity_login_line"
        android:layout_below="@id/model_user_activity_register_pwd"
        />
    <TextView
        android:id="@+id/model_user_activity_register_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/model_user_register_message"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/model_user_activity_register_pwd_line"
        android:layout_marginRight="40dp"
        />
    <Button
        android:id="@+id/model_user_activity_register_button"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:background="@drawable/model_user_activity_login_button_selector"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="96dp"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:text="@string/register_button"
        />

</RelativeLayout>